versioned_docs/version-1.18/core/components/namespaces.mdx
---
title: Secure and isolated namespaces
description: Create and manage secure and isolated Kubernetes namespaces for you and your team
sidebar_label: Namespaces
id: namespaces
---

import Image from "@theme/Image";

With Okteto dashboard you can create and manage secure and isolated Kubernetes namespaces for you and your team.

The Okteto platform will take care of all the required RBAC roles and bindings, resources quotas and limits, pod security policies, and network policies so everyone in your team can safely deploy and develop applications in Kubernetes.

## Manage your namespaces

You can create up to five namespaces per account. Go to the Okteto dashboard and click on the (+) symbol on the left.

<p align="center">
  <Image
    src={require("@site/static/img/new-dialog.png").default}
    alt="new namespace dialog"
    width="650"
  />
</p>

You can also create a namespace directly from the command line with the `okteto namespace create` command.

Switch your kubectl configuration to point to your namespaces with the `okteto kubeconfig` command.

Once you're done, you can also delete your namespace via the UI, or with the `okteto namespace delete` command.

You can sleep your namespace from the command line with `okteto namespace sleep [name]`.

When you want to wake your namespace, you can use the command `okteto namespace wake [name]`.

You can sleep your namespace from the Okteto UI by clicking on the Sleep dialog.

In order to wake the namespace, you can click on the Wake dialog.

:::tip

Administrators can specify a global, default threshold for automatically sleeping a namespace in the [garbage collection](reference/helm-chart-values.mdx#gc) configuration.

:::

## Share your namespace

By default, you'll be the only person with access to your namespaces. Invite your teammates to enable true real-time collaboration.

To share a namespace go to the Okteto dashboard, select the namespace you want to share and press the `Share` button in the namespace menu (you'll find it in the main bar at the top).

<p align="center">
  <Image
    src={require("@site/static/img/share.png").default}
    alt="share a namespace"
    width="850"
  />
</p>

In the `Share` dialog, type the email address of the team members you want to share this namespace with. Once you press save, Okteto will update the necessary permissions and notify your teammates via email.

## Transfer namespace ownership

Okteto administrators have the ability to transfer non-personal namespaces between users. This process can be achieved through the Okteto UI.

To transfer a namespace to a new owner, go to the Okteto UI -> Admin -> Namespaces then locate the namespace that you would like to transfer. Click on the three dots `...` to display the namespace menu. From the namespace menu select `Transfer Ownership`.

<p align="center">
  <Image
    src={require("@site/static/img/namespace-transfer-owner.png").default}
    alt="transfer a namespace"
    width="650"
  />
</p>

When the Transfer Ownership modal appears, type the email address of the team member who you'd like the transfer the namespace to. Once you press confirm, ownership of that namespace will be immediately transferred.
If you wish, you can keep the current owner as a member of the namespace by selecting the option in the Transfer Ownership modal. If this is not selected the current owner will immediately lose access.

<p align="center">
  <Image
    src={require("@site/static/img/namespace-transfer-modal.png").default}
    alt="select a new namespace owner"
    width="700"
  />
</p>

:::note

User specific variables will not transfer along with a namespace. If the namespace being transferred has user specific variables, please note that future build or destroy actions may fail.

New user specific variables can be added to a transferred namespace if desired to avoid future failures. Details on [adding variables can be found here](manifest/okteto-variables.mdx).

:::
